# advent

./: .gitignore  flake.nix  rust-toolchain.toml
2023/day-02/: Cargo.toml
2023/day-02/src/: lib.rs  parsers.rs
2025/: Cargo.toml
2025/day-01/: Cargo.toml
2025/day-02/: Cargo.toml
2025/day-02/src/: part_1.rs
2025/day-04/: Cargo.toml
2025/day-04/src/: part_1.rs  part_2.rs
2025/day-05/: Cargo.toml
2025/day-05/src/: part_2.rs
2025/day-06/: Cargo.toml
2025/day-06/src/: part_1.rs
2025/day-07/: Cargo.toml
2025/day-07/src/: part_1.rs
2025/day-08/: Cargo.toml
2025/day-09/: Cargo.toml
2025/day-09/src/: part_1.rs  part_2.rs
2025/day-1/: Cargo.toml
2025/day-1/src/: part_1.rs  part_2.rs
2025/day-10/: Cargo.toml
2025/day-10/src/: part_1.rs  part_2.rs
2025/day-11/: Cargo.toml
2025/day-11/src/: part_1.rs  part_2.rs
2025/day-12/: Cargo.toml
2025/day-12/src/: part_1.rs  part_2.rs
2025/day-2/: Cargo.toml
2025/day-2/src/: part_2.rs
2025/day-4/: Cargo.toml
2025/day-5/: Cargo.toml
2025/day-5/src/: part_1.rs
2025/day-6/: Cargo.toml
2025/day-6/src/: part_2.rs
2025/day-7/: Cargo.toml
2025/day-7/src/: part_2.rs
2025/day-8/: Cargo.toml
2025/day-8/src/: part_1.rs  part_2.rs
2025/day-9/: Cargo.toml
2025/day-9/src/: part_2.rs
nix/flake/: dev-shells.nix  formatter.nix  packages.nix
